--- a/start.ipynb
+++ b/start.ipynb
@@ -9,7 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyP57GJ8cBECqqbckcWQaBb3",
+      "authorship_tag": "ABX9TyP6KLHp14Lv9/8KQyTAmQqt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1929,11 +1929,185 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lspAwXr4EWj5"
+        "id": "FV_oXa58fUcG"
+      },
+      "source": [
+        "#data augmentation\n",
+        "def data_aug(img):\n",
+        "\n",
+        "   idx = np.random.randint(0,4)\n",
+        "\n",
+        "   if idx == 0:\n",
+        "\n",
+        "      h  = tune_odd(np.random.randint(1,17))\n",
+        "      w  = tune_odd(np.random.randint(1,17))\n",
+        "\n",
+        "      kernel_shape = (h,w)\n",
+        "\n",
+        "      img = GaussianBlur(img,kernel_shape)\n",
+        "\n",
+        "   elif idx == 1:\n",
+        "\n",
+        "      img = GaussianNoise(img)\n",
+        "\n",
+        "   elif idx == 2:\n",
+        "\n",
+        "      color_aug_seq = [ i for i in range(4)]\n",
+        "      random.shuffle(color_aug_seq)\n",
+        "\n",
+        "      for i in color_aug_seq:\n",
+        "\n",
+        "         if i == 0:\n",
+        "\n",
+        "            img = random_brightness(img)\n",
+        "\n",
+        "         elif i == 1:\n",
+        "\n",
+        "            img = random_saturation(img)\n",
+        "\n",
+        "         elif i == 2:\n",
+        "\n",
+        "            img = random_contrast(img)\n",
+        "\n",
+        "         elif i == 3:\n",
+        "\n",
+        "            img = random_hue(img)\n",
+        "\n",
+        "   elif idx == 3:\n",
+        "\n",
+        "      for i in range(16):\n",
+        "\n",
+        "         h = np.random.randint(8,81)\n",
+        "         w = np.random.randint(8,81)\n",
+        "\n",
+        "         kernel_size = (h,w)\n",
+        "\n",
+        "         img = random_erase(img,kernel_size)\n",
+        "\n",
+        "      \n",
+        "   return img\n",
+        "\n",
+        "@jit(nopython=True)\n",
+        "def tune_odd(val):\n",
+        "\n",
+        "   if (val % 2) == 0:\n",
+        "\n",
+        "      val = val + 1\n",
+        "\n",
+        "   return val\n",
+        "\n",
+        "#Gaussian Blur\n",
+        "def GaussianBlur(img,kernel_shape,sigma=0):\n",
+        "\n",
+        "   \"\"\"\n",
+        "   img -- numpy array\n",
+        "   kernel_shape -- (int,int)\n",
+        "   sigma -- real number\n",
+        "   \"\"\"\n",
+        "\n",
+        "   return cv2.GaussianBlur(img,kernel_shape,sigma)\n",
+        "\n",
+        "\n",
+        "##Gaussian Noise\n",
+        "@jit(nopython=True)\n",
+        "def ext_operator(val):\n",
+        "\n",
+        "  if val > 255 :\n",
+        "\n",
+        "    val = 255\n",
+        "\n",
+        "  elif val < 0:\n",
+        "\n",
+        "    val = 0\n",
+        "\n",
+        "  return val\n",
+        "\n",
+        "@jit(nopython=True)\n",
+        "def GaussianNoise(img,low=8,high=64):\n",
+        "\n",
+        "  nH,nW,nC = img.shape\n",
+        "\n",
+        "  for h in range(nH):\n",
+        "\n",
+        "    for w in range(nW):\n",
+        "\n",
+        "      for c in range(nC):\n",
+        "\n",
+        "        factor = np.random.randint(low,high)\n",
+        "\n",
+        "        loc = factor * np.random.random()\n",
+        "\n",
+        "        scale = factor * np.random.random()\n",
+        "\n",
+        "        noise = np.random.normal(loc,scale)\n",
+        "\n",
+        "        img[h,w,c] = ext_operator(img[h,w,c]+noise)\n",
+        "\n",
+        "  return img\n",
+        "\n",
+        "\n",
+        "#brightness\n",
+        "def random_brightness(img):\n",
+        "\n",
+        "   return tf.image.random_brightness(img,0.4).numpy()\n",
+        "\n",
+        "\n",
+        "#saturation\n",
+        "def random_saturation(img):\n",
+        "\n",
+        "   return tf.image.random_saturation(img,1.5,8.0).numpy()\n",
+        "\n",
+        "#contrast\n",
+        "def random_contrast(img):\n",
+        "\n",
+        "   return tf.image.random_contrast(img,1.5,8.0).numpy()\n",
+        "\n",
+        "#hue\n",
+        "def random_hue(img):\n",
+        "\n",
+        "   return tf.image.random_hue(img,0.4).numpy()\n",
+        "\n",
+        "#erase\n",
+        "@jit(nopython=True)\n",
+        "def random_erase(img,kernel_size=(64,64)):\n",
+        "\n",
+        "   nH,nW,_ = img.shape\n",
+        "   fH,fW = kernel_size\n",
+        "\n",
+        "   new_nH = nH - fH + 1\n",
+        "   new_nW = nW - fW + 1\n",
+        "\n",
+        "   nH_start = np.random.randint(0,new_nH)\n",
+        "   nW_start = np.random.randint(0,new_nW)\n",
+        "\n",
+        "   nH_end = nH_start + fH\n",
+        "   nW_end = nW_start + fW\n",
+        "\n",
+        "   erase_region = img[nH_start:nH_end,nW_start:nW_end,:].copy()\n",
+        "\n",
+        "   for h in range(nH_start,nH_end):\n",
+        "\n",
+        "      for w in range(nW_start,nW_end):\n",
+        "         \n",
+        "         random_h = np.random.randint(0,fH)\n",
+        "         random_w = np.random.randint(0,fW)\n",
+        "\n",
+        "         img[h,w,:] = erase_region[random_h,random_w,:].copy()\n",
+        "\n",
+        "\n",
+        "   return img"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DSwsLaF0feA7"
       },
       "source": [
         "#generator\n",
-        "def get_gt_data(batch_size,img_info,class_info,img_path,img_shape = (640,640),standard_scale=(19360,66930)):\n",
+        "def get_gt_data(batch_size,img_info,class_info,img_path,img_shape = (640,640),standard_scale=(19360,66930),aug_flag=False):\n",
         "\n",
         "   \"\"\"\n",
         "   #img_shape -- (height,width)\n",
@@ -1965,7 +2139,7 @@
         "\n",
         "\n",
         "      #get image data -- np.array\n",
-        "      img_data = get_image_data(name_list,img_path,img_shape)\n",
+        "      img_data = get_image_data(name_list,img_path,img_shape,aug_flag)\n",
         "\n",
         "      #get y_true data -- tuple (np.array,np.array,np.array)\n",
         "      label = get_y_true(name_list,img_info,class_info,img_shape,standard_scale)\n",
@@ -2000,7 +2174,7 @@
         "   return img_data,label\n",
         "\"\"\"\n",
         "      \n",
-        "def get_image_data(name_list,img_path,img_shape=(640,640)):\n",
+        "def get_image_data(name_list,img_path,img_shape=(640,640),aug_flag=False):\n",
         "\n",
         "   \"\"\"\n",
         "   return numpy.ndarray\n",
@@ -2017,6 +2191,10 @@
         "      img = preprocess_image(img,img_shape)\n",
         "\n",
         "      #img = cv2.resize(img,(128,128))\n",
+        "      #data augmentation\n",
+        "      if aug_flag:\n",
+        "\n",
+        "         img = data_augment.data_aug(img)\n",
         "\n",
         "      #save img\n",
         "      img_data.append(img)\n",
@@ -2329,13 +2507,13 @@
         "   optimizer = tf.keras.optimizers.Adam(learning_rate=lr_scheduler)\n",
         "\n",
         "   #define model\n",
-        "   #model = alpha_model()\n",
-        "   model = tf.keras.models.load_model(f\"{cur_path}/gdrive/MyDrive/model\")\n",
+        "   model = alpha_model()\n",
+        "   #model = tf.keras.models.load_model(f\"{cur_path}/gdrive/MyDrive/model\")\n",
         "   \n",
         "\n",
-        "batch_size_per_replica = 4\n",
+        "batch_size_per_replica = 5\n",
         "\n",
-        "EPOCHS = 20\n",
+        "EPOCHS = 150\n",
         "\n",
         "#preprocessing class\n",
         "input_path = f\"{cur_path}/gdrive/MyDrive/annotations/train_annotations.csv\"\n",
@@ -2365,14 +2543,24 @@
         "#total step per epochs\n",
         "total_step_per_epoch = int(m/buffer_size)\n",
         "\n",
+        "#aug flag\n",
+        "aug_flag = False\n",
         "\n",
         "#train\n",
         "for i  in range(EPOCHS):\n",
         "\n",
         "   total_loss = 0.0\n",
         "\n",
+        "   if (i % 2) == 1:\n",
+        "\n",
+        "     aug_flag = True\n",
+        "\n",
+        "   else:\n",
+        "\n",
+        "     aug_flag = False\n",
+        "\n",
         "   #get data \n",
-        "   for train_images, train_labels in get_gt_data(buffer_size,img_train_info,class_train_info,img_train_path,img_shape,standard_scale):\n",
+        "   for train_images, train_labels in get_gt_data(buffer_size,img_train_info,class_train_info,img_train_path,img_shape,standard_scale,aug_flag):\n",
         "\n",
         "      #normalize the image to 0 to 1\n",
         "      train_images = train_images/ np.float64(255)\n",
@@ -2401,7 +2589,8 @@
         "id": "gdWqOutS8rbr"
       },
       "source": [
-        "tf.keras.models.save_model(model,f\"{cur_path}/gdrive/MyDrive/model\")"
+        "#tf.keras.models.save_model(model,f\"{cur_path}/gdrive/MyDrive/model\")\n",
+        "model.save(f\"{cur_path}/gdrive/MyDrive/model\")"
       ],
       "execution_count": null,
       "outputs": []
