--- a/start.ipynb
+++ b/start.ipynb
@@ -9,7 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyP6KLHp14Lv9/8KQyTAmQqt",
+      "authorship_tag": "ABX9TyNPGUb6ioBJyFj1NrykzwBy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2194,7 +2194,7 @@
         "      #data augmentation\n",
         "      if aug_flag:\n",
         "\n",
-        "         img = data_augment.data_aug(img)\n",
+        "         img = data_aug(img)\n",
         "\n",
         "      #save img\n",
         "      img_data.append(img)\n",
@@ -2507,13 +2507,13 @@
         "   optimizer = tf.keras.optimizers.Adam(learning_rate=lr_scheduler)\n",
         "\n",
         "   #define model\n",
-        "   model = alpha_model()\n",
-        "   #model = tf.keras.models.load_model(f\"{cur_path}/gdrive/MyDrive/model\")\n",
+        "   #model = alpha_model()\n",
+        "   model = tf.keras.models.load_model(f\"{cur_path}/gdrive/MyDrive/model\")\n",
         "   \n",
         "\n",
         "batch_size_per_replica = 5\n",
         "\n",
-        "EPOCHS = 150\n",
+        "EPOCHS = 300\n",
         "\n",
         "#preprocessing class\n",
         "input_path = f\"{cur_path}/gdrive/MyDrive/annotations/train_annotations.csv\"\n",
