--- a/start.ipynb
+++ b/start.ipynb
@@ -9,7 +9,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyO3FoFHW/nEzXgGR4Xt4GvL",
+      "authorship_tag": "ABX9TyMyKynIp/Tz13LyXz2aZ2ve",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1535,7 +1535,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xsPDAXMzWKwd"
+        "id": "CcsmrGjCfjpE"
       },
       "source": [
         "class alpha_loss(tf.keras.losses.Loss):\n",
@@ -1548,8 +1548,21 @@
         "\n",
         "  def call(self,y_true,y_pred):\n",
         "\n",
+        "    \"\"\"\n",
+        "    y_true -- (batch_size,H,W,info) -- info [prob,x_left,y_left,x_center,y_center,class]\n",
+        "    y_pred -- (batch_size,H,W,info) -- info [prob,x_left,y_left,x_center,y_center,class]\n",
+        "\n",
+        "    \"\"\"\n",
+        "\n",
         "    #get object mask\n",
         "    object_mask = K.cast(y_true[:,:,:,0:1],K.dtype(y_pred))\n",
+        "\n",
+        "    object_mask_bool = K.cast(object_mask,dtype=tf.bool)\n",
+        "\n",
+        "    #get ignore mask\n",
+        "    ignore_mask  = tf.TensorArray(K.dtype(y_pred),size=1,dynamic_size=True)\n",
+        "\n",
+        "    ignore_mask = get_ignore_mask(ignore_mask,y_true,y_pred,object_mask_bool)\n",
         "\n",
         "    #get prob\n",
         "    prob_true = y_true[:,:,:,0:1]\n",
@@ -1573,8 +1586,12 @@
         "    #class_pred = K.clip(class_pred,min_value = 0.0, max_value = 1.0)\n",
         "\n",
         "    #prob focal loss\n",
-        "    loss_tensor_prob =  - ( (1 - prob_pred[:,:,:,:])**self.gamma ) * prob_true[:,:,:,:] * tf.math.log( prob_pred[:,:,:,:] + 1e-18 ) - ( prob_pred[:,:,:,:] ** self.gamma ) * ( 1 - prob_true[:,:,:,:] ) * tf.math.log( 1 - prob_pred[:,:,:,:] + 1e-18 ) \n",
-        "    prob_focal_loss = K.sum(loss_tensor_prob[:,:,:,:]*object_mask[:,:,:,:])/ m\n",
+        "    loss_tensor_prob =  - ( (1 - prob_pred[:,:,:,:])**self.gamma ) * prob_true[:,:,:,:] * tf.math.log( prob_pred[:,:,:,:] + 1e-18 ) - ( prob_pred[:,:,:,:] ** self.gamma ) * ( 1 - prob_true[:,:,:,:] ) * tf.math.log( 1 - prob_pred[:,:,:,:] + 1e-18 )\n",
+        "    \n",
+        "    pos_loss_tensor_prob = loss_tensor_prob[:,:,:,:] * object_mask[:,:,:,:]\n",
+        "    neg_loss_tensor_prob = loss_tensor_prob[:,:,:,:] * (1 - object_mask[:,:,:,:]) * ignore_mask[:,:,:,:]\n",
+        "    \n",
+        "    prob_focal_loss = K.sum( (pos_loss_tensor_prob[:,:,:,:] + neg_loss_tensor_prob[:,:,:,:]) )/ m\n",
         "\n",
         "    #class focal loss\n",
         "    loss_tensor_class =  - ( (1 - class_pred[:,:,:,:])**self.gamma ) * class_true[:,:,:,:] * tf.math.log( class_pred[:,:,:,:] + 1e-18 ) - ( class_pred[:,:,:,:] ** self.gamma) * ( 1 - class_true[:,:,:,:] ) * tf.math.log( 1 - class_pred[:,:,:,:] + 1e-18 )\n",
@@ -1597,7 +1614,11 @@
         "\n",
         "    #calculate width x height of anchor box\n",
         "    reg_wh_true = (reg_center_true[:,:,:,:] - reg_left_true[:,:,:,:])*2\n",
-        "    reg_wh_pred = (reg_center_pred[:,:,:,:] - reg_left_pred[:,:,:,:])*2 \n",
+        "    reg_wh_pred = (reg_center_pred[:,:,:,:] - reg_left_pred[:,:,:,:])*2\n",
+        "\n",
+        "    #get reg right\n",
+        "    reg_right_true = reg_left_true[:,:,:,:] + reg_wh_true[:,:,:,:]\n",
+        "    reg_right_pred = reg_left_pred[:,:,:,:] + reg_wh_pred[:,:,:,:]\n",
         "\n",
         "    #get reg width\n",
         "    reg_width_true = reg_wh_true[:,:,:,0:1] \n",
@@ -1607,59 +1628,68 @@
         "    reg_height_true = reg_wh_true[:,:,:,1:2]\n",
         "    reg_height_pred = reg_wh_pred[:,:,:,1:2]\n",
         "\n",
-        "    \"\"\"\n",
+        "    \n",
         "    #****************** Box Scale Entropy ******************\n",
         "    \n",
         "    #calculate mini width\n",
         "    reg_width_mini = tf.math.minimum(reg_width_true,reg_width_pred)\n",
+        "\n",
+        "    reg_width_mini = K.square(reg_width_mini)\n",
         "    \n",
         "    #calculate max width\n",
         "    reg_width_max = tf.math.maximum(reg_width_true,reg_width_pred)\n",
+        "\n",
+        "    reg_width_max = K.square(reg_width_max)\n",
         "    \n",
-        "    ######\n",
-        "    #reg_width_max = tf.clip_by_value(reg_width_max,clip_value_min = 0 ,clip_value_max=640 )\n",
         "\n",
         "    #calculate width scale\n",
-        "    reg_width_scale = tf.math.sqrt( 1 - (reg_width_mini[:,:,:,:] / ( reg_width_max[:,:,:,:] + 1e-7) ) )\n",
+        "    reg_width_scale = reg_width_mini[:,:,:,:] / ( reg_width_max[:,:,:,:] + 1e-10 ) \n",
         "\n",
         "    #----------------------------------------------------------------------\n",
         "    \n",
         "    #calculate mini height\n",
         "    reg_height_mini = tf.math.minimum(reg_height_true,reg_height_pred)\n",
         "\n",
+        "    reg_height_mini = K.square(reg_height_mini)\n",
+        "\n",
         "    #calculate max height\n",
         "    reg_height_max = tf.math.maximum(reg_height_true,reg_height_pred)\n",
         "\n",
-        "    ######\n",
-        "    #reg_height_max = tf.clip_by_value(reg_height_max,clip_value_min = 0 ,clip_value_max=640 )\n",
+        "    reg_height_max = K.square(reg_height_max)\n",
+        "\n",
         "\n",
         "    #calculate height scale\n",
-        "    reg_height_scale = tf.math.sqrt( 1 - (reg_height_mini[:,:,:,:] / ( reg_height_max[:,:,:,:] + 1e-7 ) ) )\n",
+        "    reg_height_scale =  reg_height_mini[:,:,:,:] / ( reg_height_max[:,:,:,:] + 1e-10 )\n",
         "\n",
         "    #----------------------------------------------------------------------\n",
         "\n",
         "    #Box Scale Entropy\n",
-        "    loss_tensor_Box_Scale_Entropy = reg_width_scale[:,:,:,:] * reg_height_scale[:,:,:,:]\n",
+        "    loss_tensor_Box_Scale_Entropy = - tf.math.log(reg_width_scale[:,:,:,:] + 1e-18)  -  tf.math.log(reg_height_scale[:,:,:,:] + 1e-18)\n",
+        "\n",
+        "    box_scale_entropy_loss = K.sum(loss_tensor_Box_Scale_Entropy[:,:,:,:] * object_mask[:,:,:,:] ) / m\n",
         "    \n",
         "\n",
         "    #****************** Box Scale Entropy ******************\n",
-        "    \"\"\"\n",
+        "    \n",
         "    #****************** IOU loss ******************\n",
         "    \n",
         "    #calculate IOU  \n",
         "\n",
-        "    #calculate intersection width\n",
-        "    reg_width_intersection = tf.math.minimum(reg_width_true,reg_width_pred)\n",
-        "    \n",
-        "    reg_width_intersection = K.maximum(reg_width_intersection,0.0)\n",
+        "    #calculate intersection left\n",
+        "    reg_left_intersection = tf.math.maximum(reg_left_true,reg_left_pred)\n",
         "\n",
-        "    #calculate intersection height\n",
-        "    reg_height_intersection = tf.math.minimum(reg_height_true,reg_height_pred)\n",
+        "    #calculate intersection right\n",
+        "    reg_right_intersection = tf.math.minimum(reg_right_true,reg_right_pred)\n",
         "\n",
-        "    reg_height_intersection = K.maximum(reg_height_intersection,0.0)\n",
+        "    #calibrate\n",
+        "    #reg_right_intersection = tf.where((reg_left_intersection>reg_right_intersection),reg_left_intersection,reg_right_intersection) #-- same meaning\n",
+        "    reg_right_intersection = tf.math.maximum(reg_left_intersection,reg_right_intersection) #-- same meaning\n",
+        "\n",
+        "    #intersection width height\n",
+        "    intersection_wh = reg_right_intersection[:,:,:,:] - reg_left_intersection[:,:,:,:]\n",
         "\n",
         "    #intersection area\n",
-        "    intersection_area = reg_width_intersection[:,:,:,:] * reg_height_intersection[:,:,:,:]\n",
+        "    intersection_area = intersection_wh[:,:,:,0:1] * intersection_wh[:,:,:,1:2]\n",
         "\n",
         "    #union area\n",
         "    true_area = reg_wh_true[:,:,:,0:1] * reg_wh_true[:,:,:,1:2]\n",
@@ -1686,12 +1716,102 @@
         "    #****************** Loc loss ******************\n",
         "\n",
         "    #calculate reg loss\n",
-        "    reg_loss = loc_loss + iou_loss\n",
+        "    reg_loss = loc_loss + iou_loss + box_scale_entropy_loss\n",
         " \n",
         "    #calculate loss\n",
         "    loss = prob_focal_loss + class_focal_loss + reg_loss\n",
         " \n",
-        "    return loss"
+        "    return loss\n",
+        "\n",
+        "def get_ignore_mask(ignore_mask,y_true,y_pred,object_mask_bool,ignore_threshold = 0.5):\n",
+        "\n",
+        "  \"\"\"\n",
+        "  y_true -- (batch_size,H,W,info) -- info [prob,x_left,y_left,x_center,y_center,class]\n",
+        "  y_pred -- (batch_size,H,W,info) -- info [prob,x_left,y_left,x_center,y_center,class]\n",
+        "  ignore_mask -- TensorArray\n",
+        "  \"\"\"\n",
+        "  #set up\n",
+        "  y_true = K.cast(y_true,K.dtype(y_pred))\n",
+        "\n",
+        "  m = K.cast(K.shape(y_true)[0],tf.int32)\n",
+        "\n",
+        "  i = 0\n",
+        "\n",
+        "  i = K.cast(i,K.dtype(m))\n",
+        "\n",
+        "  #loop via each batch\n",
+        "  while i < m:\n",
+        "\n",
+        "    #get true box -- shape (n,4)\n",
+        "    true_box = tf.boolean_mask(y_true[i,:,:,1:5],object_mask_bool[i,:,:,0])\n",
+        "\n",
+        "    #get true box -- shape (1,n,4)\n",
+        "    true_box = true_box[tf.newaxis,:,:]\n",
+        "\n",
+        "    #get y_pred_batch -- shape (h,w,4)\n",
+        "    y_pred_batch = y_pred[i,:,:,1:5]\n",
+        "    \n",
+        "    #get y_pred_batch -- shape (h,w,1,4)\n",
+        "    y_pred_batch = y_pred_batch[:,:,tf.newaxis,:]\n",
+        "\n",
+        "    #****************** IOU ******************\n",
+        "\n",
+        "    #batch pred -- (h,w,1,4)\n",
+        "    batch_pred_left_xy =  y_pred_batch[:,:,:,0:2]\n",
+        "    batch_pred_center_xy = y_pred_batch[:,:,:,2:4]\n",
+        "    \n",
+        "    batch_pred_wh = (batch_pred_center_xy[:,:,:,:] - batch_pred_left_xy[:,:,:,:])*2\n",
+        "\n",
+        "    batch_pred_right_xy = batch_pred_left_xy[:,:,:,:] + batch_pred_wh[:,:,:,:] \n",
+        "\n",
+        "    #batch true -- (1,n,4)\n",
+        "    batch_true_left_xy = true_box[:,:,0:2]\n",
+        "    batch_true_center_xy = true_box[:,:,2:4]\n",
+        "\n",
+        "    batch_true_wh =  (batch_true_center_xy[:,:,:] - batch_true_left_xy[:,:,:])*2\n",
+        "\n",
+        "    batch_true_right_xy = batch_true_left_xy[:,:,:] + batch_true_wh[:,:,:]\n",
+        "\n",
+        "    #intersection -- (h,w,n,2)\n",
+        "    batch_intersection_left = K.maximum(batch_pred_left_xy,batch_true_left_xy)\n",
+        "    batch_intersection_right = K.minimum(batch_pred_right_xy,batch_true_right_xy)\n",
+        "\n",
+        "    #calibrate \n",
+        "    batch_intersection_right = K.maximum(batch_intersection_right,batch_intersection_left)\n",
+        "\n",
+        "    #batch intersection wh -- (h,w,n,2)\n",
+        "    batch_intersection_wh = batch_intersection_right[:,:,:,:] - batch_intersection_left[:,:,:,:]\n",
+        "    \n",
+        "    #batch intersection area -- (h,w,n)\n",
+        "    batch_intersection_area = batch_intersection_wh[:,:,:,0] * batch_intersection_wh[:,:,:,1]\n",
+        "\n",
+        "    #batch union area -- (h,w,n)\n",
+        "    batch_true_union_area = batch_true_wh[:,:,0] * batch_true_wh[:,:,1]\n",
+        "    batch_pred_union_area = batch_pred_wh[:,:,:,0] * batch_pred_wh[:,:,:,1]\n",
+        "\n",
+        "    batch_union_area = (batch_true_union_area + batch_pred_union_area) - batch_intersection_area\n",
+        "\n",
+        "    #calculate iou -- (h,w,n)\n",
+        "    batch_iou = batch_intersection_area / batch_union_area\n",
+        "\n",
+        "    #****************** IOU ******************\n",
+        "\n",
+        "    #get best iou -- (h,w,1)\n",
+        "    best_iou = K.max(batch_iou,axis=-1,keepdims=True)\n",
+        "\n",
+        "    #ignore value -- (h,w,1)\n",
+        "    ignore_val = K.cast(best_iou < ignore_threshold,K.dtype(y_pred))\n",
+        "\n",
+        "    #update ignore mask\n",
+        "    ignore_mask = ignore_mask.write(i,ignore_val)\n",
+        "\n",
+        "    #update i\n",
+        "    i = i + 1\n",
+        "\n",
+        "  #stack to tensor -- (m,h,w,1)\n",
+        "  ignore_mask = ignore_mask.stack()\n",
+        "\n",
+        "  return ignore_mask"
       ],
       "execution_count": null,
       "outputs": []
@@ -2766,7 +2886,7 @@
         "      obj_large_true[h_pos,w_pos,5+class_id] = 1\n",
         "\n",
         "      #multiple positive\n",
-        "      #obj_large_true = multiple_positive_labeling(obj_large_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "      obj_large_true = multiple_positive_labeling(obj_large_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
         "\n",
         "\n",
         "   #update medium obj\n",
@@ -2802,7 +2922,7 @@
         "      obj_medium_true[h_pos,w_pos,5+class_id] = 1\n",
         "\n",
         "      #multiple positive\n",
-        "      #obj_medium_true = multiple_positive_labeling(obj_medium_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "      obj_medium_true = multiple_positive_labeling(obj_medium_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
         "\n",
         "\n",
         "   #update small obj\n",
@@ -2839,7 +2959,7 @@
         "\n",
         "\n",
         "      #multiple positive\n",
-        "      #obj_small_true = multiple_positive_labeling(obj_small_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
+        "      obj_small_true = multiple_positive_labeling(obj_small_true,class_id,xmin,ymin,xmax,ymax,xcenter,ycenter,step_w,step_h)\n",
         "                 \n",
         "   return obj_small_true,obj_medium_true,obj_large_true\n",
         "\n",
@@ -2863,9 +2983,15 @@
         "   w_max = int(w_pos_init + 3*32*step_w)\n",
         "   h_max = int(h_pos_init + 3*32*step_h)\n",
         "\n",
+        "   n = 0\n",
+        "\n",
         "   for w_pos in range(w_pos_init,w_max):\n",
         "\n",
         "      for h_pos in range(h_pos_init,h_max):\n",
+        "\n",
+        "         if n >= 5:\n",
+        "\n",
+        "           break\n",
         "\n",
         "         if (y_true[h_pos,w_pos,0] == 0) and (w_pos > xlow) and (w_pos < xhigh) and (h_pos > ylow) and (h_pos < yhigh):\n",
         "\n",
@@ -2882,6 +3008,8 @@
         "\n",
         "            #class\n",
         "            y_true[h_pos,w_pos,5+class_id] = 1\n",
+        "\n",
+        "            n = n + 1\n",
         "\n",
         "\n",
         "   return y_true"
@@ -3103,7 +3231,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wgER_fiUNjJs"
+        "id": "qnWBieqNAz3O"
       },
       "source": [
         "@tf.function\n",
@@ -3118,6 +3246,7 @@
         "   #define model\n",
         "   #model = tf.keras.models.load_model(model_path)\n",
         "   model = alpha_model()\n",
+        "   #model.load_weights(f\"{cur_path}/gdrive/MyDrive/model_weights\")\n",
         "   model.load_weights(model_path)\n",
         "\n",
         "   return model\n",
@@ -3172,20 +3301,26 @@
         "\n",
         "         #large object\n",
         "         large_obj = y[0][i].numpy()\n",
-        "         \n",
-        "         selected_object = analyse_feature(large_obj,confidence_threshold,diou_threshold)\n",
-        "         img = draw_box_based_on_feat(img,selected_object,reversed_class_map,class_color_map)\n",
+        "         large_confirmed_anchor_box = get_confirmed_anchor_box(large_obj,confidence_threshold)\n",
         "         \n",
         "         #medium object\n",
         "         medium_obj = y[1][i].numpy()\n",
-        "         \n",
-        "         selected_object = analyse_feature(medium_obj,confidence_threshold,diou_threshold)\n",
-        "         img = draw_box_based_on_feat(img,selected_object,reversed_class_map,class_color_map)\n",
+        "         medium_confirmed_anchor_box = get_confirmed_anchor_box(medium_obj,confidence_threshold)\n",
         "         \n",
         "         #small object\n",
         "         small_obj = y[2][i].numpy()\n",
+        "         small_confirmed_anchor_box = get_confirmed_anchor_box(small_obj,confidence_threshold)\n",
+        "\n",
+        "         #final anchor box -- final_anchor_box -- list: [ (prob1,feat_vec1) , (prob2,feat_vec2) , ... ]\n",
+        "         final_anchor_box = large_confirmed_anchor_box + medium_confirmed_anchor_box + small_confirmed_anchor_box\n",
+        "\n",
+        "         #sort in descending order\n",
+        "         final_anchor_box.sort(key=lambda x:x[0],reverse=True)\n",
+        "\n",
+        "         #nms\n",
+        "         selected_object = non_max_supression(final_anchor_box,diou_threshold)\n",
         "         \n",
-        "         selected_object = analyse_feature(small_obj,confidence_threshold,diou_threshold)\n",
+        "         #draw prediction\n",
         "         img = draw_box_based_on_feat(img,selected_object,reversed_class_map,class_color_map)\n",
         "\n",
         "         #save the result\n",
